feat(user): removed iam module, added user endpoints and migrations, disabled grpc related functions
