# module/user/interfaces/http/rest/UserCommandController.go
@@ -4,8 +4,8 @@ import (
 	"context"
 	"encoding/json"
 	"net/http"
-	"time"
 
+	"github.com/go-chi/jwtauth"
 	"github.com/go-playground/validator/v10"
 
 	"celeste/interfaces/http/rest/viewmodels"
@@ -65,11 +65,11 @@ func (controller *UserCommandController) CreateUser(w http.ResponseWriter, r *ht
 	}
 
 	user := serviceTypes.CreateUser{
-		ID:   request.ID,
-		Data: request.Data,
+		Email: request.Email,
+		Name:  request.Name,
 	}
 
-	res, err := controller.UserCommandServiceInterface.CreateUser(context.TODO(), user)
+	sss2, err := controller.UserCommandServiceInterface.CreateUser(context.TODO(), user)
 	if err != nil {
 		var httpCode int
 		var errorMsg string
@@ -101,11 +101,205 @@ func (controller *UserCommandController) CreateUser(w http.ResponseWriter, r *ht
 		Status:  http.StatusOK,
 		Success: true,
 		Message: "Successfully created user.",
-		Data: &types.UserResponse{
-			ID:        res.ID,
-			Data:      res.Data,
-			CreatedAt: time.Now().Unix(),
+		Data: &types.CreateUserResponse{
+			SSS2: sss2,
 		},
+	}
+
+	response.JSON(w)
+}
+
+// UpdateUser request handler to update user
+func (controller *UserCommandController) UpdateUser(w http.ResponseWriter, r *http.Request) {
+	_, claims, _ := jwtauth.FromContext(r.Context())
+	walletAddress := claims["id"].(string)
+
+	// FIXME: remove this temporary code for allowing demo exploration
+	if walletAddress == "0xd78F31c1181a305C1Afa5F542fFBE7bda97D5C05" {
+		response := viewmodels.HTTPResponseVM{
+			Status:    http.StatusUnauthorized,
+			Success:   false,
+			Message:   "For demo purposes only. Contact support to explore the full features.",
+			ErrorCode: apiError.UnauthorizedAccess,
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	var request types.UpdateUserRequest
+
+	if err := json.NewDecoder(r.Body).Decode(&request); err != nil {
+		response := viewmodels.HTTPResponseVM{
+			Status:    http.StatusBadRequest,
+			Success:   false,
+			Message:   "Invalid payload request.",
+			ErrorCode: apiError.InvalidRequestPayload,
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	// validate request
+	err := types.Validate.Struct(request)
+	if err != nil {
+		errors := err.(validator.ValidationErrors)
+		if len(errors) > 0 {
+			response := viewmodels.HTTPResponseVM{
+				Status:    http.StatusBadRequest,
+				Success:   false,
+				Message:   types.ValidationErrors[errors[0].StructNamespace()],
+				ErrorCode: apiError.InvalidPayload,
+			}
+
+			response.JSON(w)
+			return
+		}
+
+		response := viewmodels.HTTPResponseVM{
+			Status:    http.StatusBadRequest,
+			Success:   false,
+			Message:   "Invalid payload request.",
+			ErrorCode: apiError.InvalidRequestPayload,
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	user := serviceTypes.UpdateUser{
+		WalletAddress: walletAddress,
+		Name:          request.Name,
+	}
+
+	err = controller.UserCommandServiceInterface.UpdateUser(context.TODO(), user)
+	if err != nil {
+		var httpCode int
+		var errorMsg string
+
+		switch err.Error() {
+		case errors.DatabaseError:
+			httpCode = http.StatusInternalServerError
+			errorMsg = "Error occurred while updating user."
+		default:
+			httpCode = http.StatusInternalServerError
+			errorMsg = "Please contact technical support."
+		}
+
+		response := viewmodels.HTTPResponseVM{
+			Status:    httpCode,
+			Success:   false,
+			Message:   errorMsg,
+			ErrorCode: err.Error(),
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	response := viewmodels.HTTPResponseVM{
+		Status:  http.StatusOK,
+		Success: true,
+		Message: "Successfully updated user.",
+	}
+
+	response.JSON(w)
+}
+
+// UpdateUserPassword request handler to update user password
+func (controller *UserCommandController) UpdateUserPassword(w http.ResponseWriter, r *http.Request) {
+	_, claims, _ := jwtauth.FromContext(r.Context())
+	walletAddress := claims["id"].(string)
+
+	// FIXME: remove this temporary code for allowing demo exploration
+	if walletAddress == "0xd78F31c1181a305C1Afa5F542fFBE7bda97D5C05" {
+		response := viewmodels.HTTPResponseVM{
+			Status:    http.StatusUnauthorized,
+			Success:   false,
+			Message:   "For demo purposes only. Contact support to explore the full features.",
+			ErrorCode: apiError.UnauthorizedAccess,
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	var request types.UpdateUserPasswordRequest
+
+	if err := json.NewDecoder(r.Body).Decode(&request); err != nil {
+		response := viewmodels.HTTPResponseVM{
+			Status:    http.StatusBadRequest,
+			Success:   false,
+			Message:   "Invalid payload request.",
+			ErrorCode: apiError.InvalidRequestPayload,
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	// validate request
+	err := types.Validate.Struct(request)
+	if err != nil {
+		errors := err.(validator.ValidationErrors)
+		if len(errors) > 0 {
+			response := viewmodels.HTTPResponseVM{
+				Status:    http.StatusBadRequest,
+				Success:   false,
+				Message:   types.ValidationErrors[errors[0].StructNamespace()],
+				ErrorCode: apiError.InvalidPayload,
+			}
+
+			response.JSON(w)
+			return
+		}
+
+		response := viewmodels.HTTPResponseVM{
+			Status:    http.StatusBadRequest,
+			Success:   false,
+			Message:   "Invalid payload request.",
+			ErrorCode: apiError.InvalidRequestPayload,
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	password := serviceTypes.UpdateUserPassword{
+		WalletAddress: walletAddress,
+		Password:      request.Password,
+	}
+
+	err = controller.UserCommandServiceInterface.UpdateUserPassword(context.TODO(), password)
+	if err != nil {
+		var httpCode int
+		var errorMsg string
+
+		switch err.Error() {
+		case errors.DatabaseError:
+			httpCode = http.StatusInternalServerError
+			errorMsg = "Error occurred while updating password."
+		default:
+			httpCode = http.StatusInternalServerError
+			errorMsg = "Please contact technical support."
+		}
+
+		response := viewmodels.HTTPResponseVM{
+			Status:    httpCode,
+			Success:   false,
+			Message:   errorMsg,
+			ErrorCode: err.Error(),
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	response := viewmodels.HTTPResponseVM{
+		Status:  http.StatusOK,
+		Success: true,
+		Message: "Successfully updated password.",
 	}
 
 	response.JSON(w)
